v1/process: STT working, added logs dir for monolog

--- a/views/Main.twig
+++ b/views/Main.twig
@@ -11,7 +11,7 @@
     </script>
   </head>
   <body>
-    <form method="get" name="noxForm" id="noxForm" action="{{ action }}" target="voiceframe">
+    <form method="post" name="noxForm" id="noxForm" action="{{ action }}" target="voiceframe">
       <input name="speechinput" id="speechinput" type="text" onFocus="submitAndClear(this);" style="width:20px;" x-webkit-speech />
       <!--input type="submit" value="ASK" /-->
     </form>
